Projeto/Compilador/tests/cases/error/T21.pas
program T21;
begin
  if (true = 1) then
    writeln('x');
end.
